Fix: remove margin from toolbar on mobile

--- a/styles/List.module.css
+++ b/styles/List.module.css
@@ -130,12 +130,12 @@
   left: 50%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
-  padding-top: 16px;
   z-index: 20;
   transform: translateX(-50%);
   padding-bottom: 12px;
+  padding-top: 0;
 }
 
 .tool_action {
@@ -340,7 +340,11 @@ input.store:checked+.store_slider:before {
   .main,
   .toolbar {
     max-width: 100%;
-    margin: 0 4%;
+    margin: 0;
+  }
+
+  .main {
+    padding: 0 8px;
   }
 }
 
